Sửa lại api userpermision